# ai-daily-digest

./: .env.example  .gitignore  Dockerfile.mcp  README.md  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: branch-test.yml  ci.yml  daily-digest.yml  deploy-mcp.yml  test-mcp.yml
digest_runner/: __init__.py  main.py  requirements.txt
digest_runner/config/: __init__.py  llm_providers.py  recipients.yaml  settings.py
digest_runner/graph/: __init__.py  digest_graph.py  state.py
digest_runner/nodes/: __init__.py  fast_fail_node.py  fetch_node.py  final_llm_node.py  llm_enrich_node.py  merger_node.py  normalize_node.py  render_node.py
digest_runner/publishers/: __init__.py  discord_publisher.py  email_publisher.py  telegram_publisher.py
digest_runner/schemas/: __init__.py  digest_schemas.py
digest_runner/subgraphs/: __init__.py  arxiv_subgraph.py  base.py  github_subgraph.py  hackernews_subgraph.py  huggingface_subgraph.py  reddit_subgraph.py  rss_subgraph.py  stackoverflow_subgraph.py
digests/: README.md  latest.html  latest.md
mcp/: SCAFFOLD.md  main.py  requirements.txt  rss_feed_catalog.py
scripts/: backfill_digest.py  deploy_mcp.sh  test_mcp_local.py  test_other_subgraphs.py  test_rss_mcp_local.py  test_rss_subgraph.py  test_subgraph_local.py
shared/: __init__.py  schemas.py
tests/: README.md  __init__.py  run_all_tests.py  test_arxiv.py  test_github.py  test_groq_api.py  test_hackernews.py  test_huggingface.py  test_reddit.py  test_rss_feeds.py  test_semantic_scholar.py  test_stackoverflow.py  testing_api_keys.py
(+34 files in other folders)
