[project]
name = "ai-daily-digest"
version = "1.0.0"
description = "AI/ML Daily Digest - automated AI news pipeline using LangGraph + MCP"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
mcp = [
    "fastapi>=0.100",
    "fastmcp>=3.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.20",
    "arxiv>=1.4.0",
    "httpx>=0.27",
    "feedparser>=6.0",
]
runner = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "instructor>=1.3.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
]
publishers = [
    "python-telegram-bot>=20.0",
    "resend>=2.0.0",
    "requests>=2.31.0",
    "markdown",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests that make real API calls (deselect with '-m not slow')",
    "mcp: marks tests that require a running MCP server",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
